--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
 <html lang="en">
   <head>
+    <title>Reddit</title>
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Getting started template</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="bundle.css" />
   </head>
 
